refactor(captcha):重构验证码模块以支持发送控制和流控 - 将 CaptchaContentProvider 重命名为 CaptchaContentGenerator - 引入 CaptchaSender 接口用于发送验证码 - 修改 DefaultCaptchaManager 实现发送逻辑和流控检查 - 更新 CaptchaStorage 接口以支持验证码发送滑动窗口管理 - 调整 Captcha 接口方法名和逻辑，如 maxVerificationTimes 和 isAllowSend - 优化 CacheCaptchaStorage 实现，增加 owner 编码和发送时间窗口管理- 修改 CaptchaManagerLocksWrapper以适配新的发送逻辑 - 更新测试类 DefaultCaptchaManagerTests 以匹配新逻辑 - 移除过时的 CaptchaGenerateChecker 和相关配置 - 调整验证码生成和验证流程，增强流控和发送限制逻辑